--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -203,6 +203,8 @@
     "txt-Top10InternalSrcIp": "內部主機告警統計",
     "txt-InternalIp": "內部主機告警統計",
     "txt-InternalMaskedIp": "內部網段告警統計",
+    "txt-frmotp": "MOTP臉部無法辨認",
+    "txt-intrusion": "IVAR臉部無法辨認",
     "txt-Top10SyslogConfigSource": "系統日誌類型統計",
     "txt-dnsQuery": "DNS Query",
     "txt-disk-usage": "系統可用空間狀態",
@@ -225,6 +227,7 @@
   },
 
   "alert": {
+    "txt-openVideo": "開啟攝影畫面",
     "txt-alertList": "告警清單",
     "txt-statistics": "統計報表",
     "txt-alertInfo": "告警資訊",
