Fix Scanner auto settings default values.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -430,6 +430,7 @@
       "txt-LDAP": "LDAP",
       "txt-netflow": "Netflow",
       "txt-scanner": "Scanner",
+      "txt-noEdgeSelected": "Please select Edge",
       "txt-connectionsFail": "Connections Fail"
     },
     "scan-list": {
