--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -430,6 +430,7 @@
       "txt-LDAP": "LDAP",
       "txt-netflow": "Netflow",
       "txt-scanner": "Scanner",
+      "txt-noEdgeSelected": "請選擇Edge",
       "txt-connectionsFail": "連線失敗"
     },
     "scan-list": {
