update incident and incident-device

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -525,5 +525,14 @@
   "serviceStatusFields": {
     "status": "Status",
     "serviceName": "Service Name"
+  },
+  "incidentFields": {
+    "deviceId": "Device ID",
+    "deviceName": "Device Name",
+    "protectTypeInfo": "Protect Type",
+    "unitName": "Unit Name",
+    "unitLevel": "Unit Level",
+    "frequency": "Trigger Frequency",
+    "updateDttm": "Last Update Time"
   }
 }
