--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -525,5 +525,14 @@
   "serviceStatusFields": {
     "status": "狀態",
     "serviceName": "服務名稱"
+  },
+  "incidentFields": {
+    "deviceId": "設備代號",
+    "deviceName": "設備名稱與型號",
+    "protectTypeInfo": "資安防護類型",
+    "unitName": "機關名稱",
+    "unitLevel": "機關等級",
+    "frequency": "觸發次數",
+    "updateDttm": "最後更新時間"
   }
 }
