--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -1,4 +1,5 @@
 {
+	"txt-soc": "SOC",
 	"txt-incident": "Incident",
 	"txt-incident-device": "Incident Device",
 	"txt-incident-management": "Incident Management",
