Add a new Config Severity Table page. Update display logic for HMD Scan File tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -155,6 +155,8 @@
 
   "txt-edge": "Edge",
   "txt-threatIntelligence": "Threat Intelligence",
+  "txt-severityTable": "Severity Table",
+  "txt-addSeverityTable": "Add Type",
   "txt-addDepartment": "Add Department",
   "txt-addTitle": "Add Title",
   "txt-updateDepartment": "Update Department",
