--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -527,11 +527,17 @@
     "serviceName": "Service Name"
   },
   "incidentFields": {
+    "incidentUnitDTO": {
+      "name": "Unit Name",
+      "level": "Unit Level"
+    },
     "deviceId": "Device ID",
     "deviceName": "Device Name",
     "protectTypeInfo": "Protect Type",
-    "unitName": "Unit Name",
-    "unitLevel": "Unit Level",
+    "oid": "Unit OID",
+    "name": "Unit Name",
+    "level": "Unit Level",
+    "industryType": "Unit Industry",
     "frequency": "Trigger Frequency",
     "updateDttm": "Last Update Time"
   }
