--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -2,16 +2,19 @@
 	"txt-soc": "事件申報",
 	"txt-incident": "情資事件",
 	"txt-incident-device": "資安事件設備",
+	"txt-incident-unit": "資安事件申報機關",
 	"txt-incident-management": "情資事件管理",
 	"txt-incident-device-management": "資安事件設備管理",
 	"unit": {
 		"txt-name": "機關名稱",
 		"txt-oid": "機關OID",
-		"txt-level": "機關等級"
+		"txt-level": "機關等級",
+		"txt-type": "機關領域"
 	},
 	"device": {
 		"txt-name": "設備名稱與型號",
-		"txt-id": "設備代號"
+		"txt-id": "設備代號",
+		"txt-company": "設備廠商"
 	},
 	"txt-protect-type": "資安防護類型",
 	"txt-protect-type-info": "其他類型名稱",
