--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -16,5 +16,15 @@
 	"txt-protect-type": "資安防護類型",
 	"txt-protect-type-info": "其他類型名稱",
 	"txt-frequency": "觸發次數",
-	"txt-note": "備註"
+	"txt-note": "備註",
+	"category": {
+		"1": "入侵攻擊類",
+		"2": "惡意程式類",
+		"3": "掃描刺探類",
+		"4": "經同意之網路攻防演練類",
+		"5": "阻斷服務類",
+		"6": "政策規則類",
+		"7": "尚需調查類",
+		"8": "系統服務類"
+	}
 }
