--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -527,6 +527,12 @@
     "serviceName": "服務名稱"
   },
   "incidentFields": {
+    "id": "事件單編號",
+    "title": "事件主旨",
+    "category": "事件類別",
+    "victimName": "單位",
+    "reporter": "通報者",
+    "createDttm": "建立時間",
     "deviceId": "設備代號",
     "deviceName": "設備名稱與型號",
     "protectTypeInfo": "資安防護類型",
