--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -528,6 +528,7 @@
   },
 
   "incidentFields": {
+    "isDefault": "Default Unit",
     "id": "ID",
     "title": "Title",
     "category": "Category",
