--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -6,6 +6,9 @@
 	"txt-incident-management": "情資事件管理",
 	"txt-incident-device-management": "資安事件設備管理",
 	"unit": {
+		"txt-default": "預設機關",
+		"txt-isDefault": "是",
+		"txt-isNotDefault": "否",
 		"txt-name": "機關名稱",
 		"txt-oid": "機關OID",
 		"txt-level": "機關等級",
