--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -533,6 +533,28 @@
     "victimName": "Victim",
     "reporter": "Reporter",
     "createDttm": "Create Datetime",
+    "impactAssessment": "Impact Assessment",
+    "description": "Description",
+    "socType": "SOC Type",
+    "relatedList": "Related List",
+    "rule": "Rule",
+    "dateRange": "Time Range",
+    "frequency": "Frequency",
+    "srcIp": "Source IP",
+    "srcPort": "Source Port",
+    "srcHostname": "Source Hostname",
+    "dstIp": "Destination IP",
+    "dstPort": "Destination Port",
+    "dstHostname": "Destination Hostname",
+    "cveId": "CVE ID",
+    "etsDescription": "Loophole",
+    "fileName": "File Name",
+    "fileExtension": "File Extension",
+    "uriType": "URI Type",
+    "uriValue": "URI Value",
+    "domain": "Domain",
+    "technique": "Technique",
+    "infrastructureType": "Infrastructure Type",
     "incidentUnitDTO": {
       "name": "Unit Name",
       "level": "Unit Level"
