fixed unit mana...

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -5,6 +5,7 @@
 	"txt-incident-unit": "Incident Unit",
 	"txt-incident-management": "Incident Management",
 	"txt-incident-device-management": "Incident Device Management",
+	"txt-incident-unit-management": "Incident Unit Management",
 	"txt-incident-events": "Incident Events",
 	"txt-incident-ttps": "TTPs",
 	"txt-prev-page": "Prev",
