--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -5,6 +5,7 @@
 	"txt-incident-unit": "資安事件申報機關",
 	"txt-incident-management": "情資事件管理",
 	"txt-incident-device-management": "設備管理",
+	"txt-incident-unit-management": "機關管理",
 	"txt-incident-events": "監控觸發紀錄",
 	"txt-incident-ttps": "攻擊手法",
 	"txt-prev-page": "上一頁",
