Complete Config Syslog Pattern Script page.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -534,6 +534,7 @@
   "syslogPatternTableFields": {
     "patternName": "Pattern Name",
     "periodMin": "Period Minutes",
+    "threshold": "Threshold",
     "lastUpdateDttm": "Last Update",
     "queryScript": "Query Script",
     "severity": "Severity"
