--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -17,13 +17,16 @@
 		"txt-name": "Unit",
 		"txt-oid": "Unit OID",
 		"txt-level": "Unit Level",
-		"txt-type": "Unit Industry"
+		"txt-type": "Unit Industry",
+		"txt-abbreviation": "Unit Abbreviation"
 	},
 	"device": {
 		"txt-name": "Device Name",
 		"txt-id": "Device Id",
 		"txt-company": "Device Company"
 	},
+	"txt-downloadEvent": "Download Event Incident Example XML",
+	"txt-downloadRelated": "Download Related Incident Example XML",
 	"txt-protect-type": "Protect Type",
 	"txt-protect-type-info": "Other Info",
 	"txt-frequency": "Frequency",
