Add Admin password reset and Privileges name update functinality. Various bug fixes.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -22,6 +22,8 @@
   "txt-accountPassword": "Account/Password",
   "txt-privileges": "Privileges",
   "txt-unlock": "Unlock",
+  "txt-resetPassword": "Reset Password",
+  "txt-resetPasswordSuccess": "Reset Password Success",
   "txt-connections": "Connections",
   "txt-packets": "Packets",
   "txt-databytes": "Databytes",
@@ -122,6 +124,7 @@
   "txt-online": "Online",
   "txt-offline": "Offline",
   "txt-unstable": "Unstable",
+  "txt-unknown": "Unknown",
   "txt-severity": "Severity",
   "txt-data": "Data",
   "txt-selectFile": "Please select file",
@@ -133,6 +136,8 @@
   "txt-column": "Column",
   "txt-ip": "IP",
   "txt-domain": "Domain",
+  "txt-commonModule": "Common Module",
+  "txt-configModule": "Configuration Module",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
@@ -437,6 +442,8 @@
       "txt-ipRange": "IP Range",
       "txt-AD": "AD",
       "txt-LDAP": "LDAP",
+      "txt-username": "Admin Username",
+      "txt-password": "Admin Password",
       "txt-netflow": "Netflow",
       "txt-scanner": "Scanner",
       "txt-noEdgeSelected": "Please select Edge",
