--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -10,6 +10,7 @@
 
   "-100":"Call web service fail{{message}}",
   "-1":"System Error {{code}} {{message}}",
+  "-2": "密碼錯誤",
   "11101":"Right already exists",
   "11102":"Right does not exist",
   "11201":"Role already exists",
@@ -50,7 +51,7 @@
   "-1002": "帳號已存在",
   "-1004": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
   "-1005": "密碼已到期",
-  "-1006": "登入錯誤已超過5次",
+  "-1006": "密碼錯誤超過5次，帳號已鎖定，請使用者聯絡系統管理員解鎖",
   "-1007": "帳號服務失敗",
   "-5001": "Port number不得重複",
   "-5002": "IP不得重複",
