--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -10,7 +10,9 @@
 	"txt-incident-ttps": "攻擊手法",
 	"txt-prev-page": "上一頁",
 	"txt-next-page": "下一頁",
-
+	"txt-audit": "審核",
+	"txt-send": "發布",
+	"txt-download": "下載",
 	"unit": {
 		"txt-default": "預設機關",
 		"txt-isDefault": "是",
