Minor style updates for HMD path and modal buttons.

--- a/locales/en/accounts.json
+++ b/locales/en/accounts.json
@@ -62,5 +62,6 @@
   "rewritePwd":"Retype new password",
   "pwd": "Password",
   "reenterPwd": "Retype password",
-  "pwd-inconsistent":"First and second typing are different"
+  "pwd-inconsistent":"First and second typing are different",
+  "pwd-empty": "Password cannot be empty"
 }
