modify incident text info

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -17,12 +17,14 @@
 	"txt-send": "Send",
 	"txt-download": "Download",
 	"txt-required": "Empty Required Fields",
-	"txt-addIncident-events": "Add Incident Events",
-	"txt-addIncident-ttps": "Add Incident Ttps",
-	"txt-viewIncident-events": "View Incident Events",
-	"txt-viewIncident-ttps": "View Incident Ttps",
-	"txt-editIncident-events": "Edit Incident Events",
-	"txt-editIncident-ttps": "Edit Incident Ttps",
+	"txt-incident-event": "Security Monitoring",
+	"txt-incident-related": "Correlation Analysis",
+	"txt-addIncident-events": "Add Security Monitoring Incident",
+	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
+	"txt-viewIncident-events": "View Security Monitoring Incident",
+	"txt-viewIncident-ttps": "View Correlation Analysis Incident",
+	"txt-editIncident-events": "Edit Security Monitoring Incident",
+	"txt-editIncident-ttps": "Edit Correlation Analysis Incident",
 	"txt-id": "ID:",
 	"unit": {
 		"txt-default": "Default Unit",
