--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -571,7 +571,8 @@
     "industryType": "機關領域",
     "frequency": "觸發次數",
     "updateDttm": "最後更新時間",
-    "abbreviation": "機關英文簡稱"
+    "abbreviation": "機關英文簡稱",
+    "type": "事件單類型"
   },
   "severityTableFields": {
     "dataSourceType": "Type",
