--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -17,12 +17,14 @@
 	"txt-send": "發布",
 	"txt-download": "下載",
 	"txt-required": "必填欄位為空",
-	"txt-addIncident-events": "新增事件單",
-	"txt-addIncident-ttps": "新增關聯單",
-	"txt-viewIncident-events": "檢視事件單",
-	"txt-viewIncident-ttps": "檢視關聯單",
-	"txt-editIncident-events": "編輯事件單",
-	"txt-editIncident-ttps": "編輯關聯單",
+	"txt-incident-event": "資安監控",
+	"txt-incident-related": "關聯分析",
+	"txt-addIncident-events": "新增資安監控事件單",
+	"txt-addIncident-ttps": "新增關聯分析事件單",
+	"txt-viewIncident-events": "檢視資安監控事件單",
+	"txt-viewIncident-ttps": "檢視關聯分析事件單",
+	"txt-editIncident-events": "編輯資安監控事件單",
+	"txt-editIncident-ttps": "編輯關聯分析事件單",
 	"txt-id": "編號:",
 	"unit": {
 		"txt-default": "預設機關",
