modify create incident info in  threat page

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -1,6 +1,7 @@
 {
 	"txt-soc": "SOC",
 	"txt-incident": "Incident",
+	"txt-createIncident": "Create Incident",
 	"txt-incident-device": "Incident Device",
 	"txt-incident-unit": "Incident Unit",
 	"txt-incident-management": "Incident Management",
