add send incident dialog & modify redirect

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -16,6 +16,9 @@
 	"txt-audit-success": "Audit Success",
 	"txt-audit-fail": "Audit Fail",
 	"txt-send": "Send",
+	"txt-send-success": "Send Success",
+	"txt-send-fail": "Send Fail",
+	"txt-sendCheck": "Whether to Send Incident directly?",
 	"txt-download": "Download",
 	"txt-required": "Empty Required Fields",
 	"txt-incident-event": "Security Monitoring",
