--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -16,6 +16,9 @@
 	"txt-audit-success": "審核成功",
 	"txt-audit-fail": "審核失敗",
 	"txt-send": "發布",
+	"txt-send-success": "發布成功",
+	"txt-send-fail": "發布失敗",
+	"txt-sendCheck": "是否直接發布",
 	"txt-download": "下載",
 	"txt-required": "必填欄位為空",
 	"txt-incident-event": "資安監控",
