Add Pattern info in Query-open-save dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -304,6 +304,7 @@
       "txt-addQuery": "Add New Query",
       "txt-noSavedQuery": "No Saved Query Found",
       "txt-noOpenQuery": "Query can not be Blank",
+      "txt-addPatternScript": "Add to Pattern Script",
       "txt-mark": "Filter / Mark",
       "txt-clear": "Clear",
       "txt-top10text": "TOP 10 Dst. Service/Dst. Host/Dst. IP",
