--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -304,6 +304,7 @@
       "txt-addQuery": "新增查詢條件",
       "txt-noSavedQuery": "查無儲存條件",
       "txt-noOpenQuery": "查詢條件不得為空白",
+      "txt-addPatternScript": "條件加入Pattern Script",
       "txt-mark": "過濾 / 標示",
       "txt-clear": "清除條件",
       "txt-top10text": "前十大目標服務/主機/IP",
