--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -58,7 +58,9 @@
   "-5004": "IP不得空白",
   "-5005": "IP格式錯誤",
   "-5006": "新增IP失敗",
-
   "txt-param-null": "參數為空",
-  "txt-account-fail" : "無法由AD獲取帳號資訊"
+  "txt-account-fail": "無法由AD獲取帳號資訊",
+
+  "-10222": "設備代號已存在",
+  "-10322": "機關OID已存在"
 }
