--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -60,5 +60,8 @@
   "-5006": "Add Ip Device Fail",
 
   "txt-param-null": "Parameter is NULL",
-  "txt-account-fail" : "Fail to get accounts from AD"
+  "txt-account-fail" : "Fail to get accounts from AD",
+
+  "-10222": "Device ID is already exist",
+  "-10322": "Unit OID is already exist"
 }
