--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -60,6 +60,7 @@
   "-5004": "IP is Required",
   "-5005": "Illegal IP format",
   "-5006": "Add Ip Device Fail",
+  "-5007": "Name already exist",
 
   "txt-param-null": "Parameter is NULL",
   "txt-account-fail" : "Fail to get accounts from AD"
