Complete Custom Alert Stat chart in Dashboard.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -207,7 +207,7 @@
     "txt-alertStatistics": "Alert Statistics",
     "txt-alertMaskedIpStatistics": "Masked IP Alert Statistics",
     "txt-alertThreatLevel": "Alert Threat Level",
-    "txt-alertPatternStat": "Pattern Name Stat",
+    "txt-customAlertStat": "Custom Alert Statistics",
     "txt-Top10ExternalSrcCountry": "Alert Source Country",
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
     "txt-InternalIp": "Alert Internal IP",
@@ -306,7 +306,7 @@
       "txt-addQuery": "Add New Query",
       "txt-noSavedQuery": "No Saved Query Found",
       "txt-noOpenQuery": "Query can not be Blank",
-      "txt-addPatternScript": "Add to Pattern Script",
+      "txt-addPatternScript": "Custom Alert Query",
       "txt-mark": "Filter / Mark",
       "txt-clear": "Clear",
       "txt-top10text": "TOP 10 Dst. Service/Dst. Host/Dst. IP",
