--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -207,7 +207,7 @@
     "txt-alertStatistics": "告警數量統計",
     "txt-alertMaskedIpStatistics": "網段威脅等級統計",
     "txt-alertThreatLevel": "告警威脅等級統計",
-    "txt-alertPatternStat": "Pattern名稱統計",
+    "txt-customAlertStat": "自定義告警統計",
     "txt-Top10ExternalSrcCountry": "外部國家告警統計",
     "txt-Top10InternalSrcIp": "內部主機告警統計",
     "txt-InternalIp": "內部主機告警統計",
@@ -306,7 +306,7 @@
       "txt-addQuery": "新增查詢條件",
       "txt-noSavedQuery": "查無儲存條件",
       "txt-noOpenQuery": "查詢條件不得為空白",
-      "txt-addPatternScript": "條件加入Pattern Script",
+      "txt-addPatternScript": "定義告警條件",
       "txt-mark": "過濾 / 標示",
       "txt-clear": "清除條件",
       "txt-top10text": "前十大目標服務/主機/IP",
