add incident log, add soc mail setting in notification block, add device popup dialog when send csv

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -331,9 +331,11 @@
     "txt-serviceNotifications": "Service Settings",
     "txt-edgeNotifications": "Edge Settings",
     "txt-alertNotifications": "Alert Settings",
+    "txt-socNotifications": "Soc Settings",
     "txt-serviceError": "Service Status Error",
     "txt-conectionsError": "Connections Status Error",
     "txt-dailyAlert": "Daily Alert Statistics",
+    "txt-sendResult": "Send Soc Notification",
     "txt-smtpServer": "SMTP Server",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "Sender",
