--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -4,10 +4,12 @@
 	"txt-createIncident": "通報事件",
 	"txt-incident-device": "資安事件設備",
 	"txt-incident-unit": "資安事件申報機關",
+	"txt-incident-log": "情資發布紀錄",
 	"txt-incident-management": "情資事件管理",
 	"txt-incident-device-management": "設備管理",
 	"txt-incident-unit-management": "機關管理",
 	"txt-incident-config-management": "情資事件參數設定",
+	"txt-incident-log-management": "情資發布紀錄管理",
 	"txt-incident-events": "監控觸發紀錄",
 	"txt-incident-ttps": "攻擊手法",
 	"txt-prev-page": "上一頁",
@@ -19,10 +21,12 @@
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
 	"txt-sendCheck": "是否直接發布",
+	"txt-sendCheckHealth": "是否手動發布健康狀態統計單?",
 	"txt-download": "下載",
 	"txt-required": "必填欄位為空",
 	"txt-incident-event": "資安監控",
 	"txt-incident-related": "關聯分析",
+	"txt-incident-health": "健康狀態統計",
 	"txt-addIncident-events": "新增資安監控事件單",
 	"txt-addIncident-ttps": "新增關聯分析事件單",
 	"txt-viewIncident-events": "檢視資安監控事件單",
