--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -460,6 +460,7 @@
     "ip": "IP",
     "mac": "MAC",
     "createDttm": "建立時間",
+    "createdDttm": "建立時間",
     "runningTaskCount": "Running Task Count",
     "waitingTaskCount": "Waiting Task Count",
     "completeTaskCount": "Complete Task Count",
@@ -534,6 +535,7 @@
     "victimName": "單位",
     "reporter": "通報者",
     "createDttm": "建立時間",
+    "sendTime": "發布時間",
     "impactAssessment": "影響等級",
     "description": "相關手法描述",
     "socType": "回報類型",
