--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -4,10 +4,12 @@
 	"txt-createIncident": "Create Incident",
 	"txt-incident-device": "Incident Device",
 	"txt-incident-unit": "Incident Unit",
+	"txt-incident-log": "Incident Log",
 	"txt-incident-management": "Incident Management",
 	"txt-incident-device-management": "Incident Device Management",
 	"txt-incident-unit-management": "Incident Unit Management",
 	"txt-incident-config-management": "Incident Config Management",
+	"txt-incident-log-management": "Incident Log Management",
 	"txt-incident-events": "Incident Events",
 	"txt-incident-ttps": "TTPs",
 	"txt-prev-page": "Prev",
@@ -19,10 +21,12 @@
 	"txt-send-success": "Send Success",
 	"txt-send-fail": "Send Fail",
 	"txt-sendCheck": "Whether to Send Incident directly?",
+	"txt-sendCheckHealth": "whether to Send Health Status Statistic csv ?",
 	"txt-download": "Download",
 	"txt-required": "Empty Required Fields",
 	"txt-incident-event": "Security Monitoring",
 	"txt-incident-related": "Correlation Analysis",
+	"txt-incident-health": "Health Status Statistic",
 	"txt-addIncident-events": "Add Security Monitoring Incident",
 	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
 	"txt-viewIncident-events": "View Security Monitoring Incident",
