--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -4,12 +4,12 @@
 	"txt-createIncident": "通報事件",
 	"txt-incident-device": "資安事件設備",
 	"txt-incident-unit": "資安事件申報機關",
-	"txt-incident-log": "情資發布紀錄",
+	"txt-incident-log": "事件發布紀錄",
 	"txt-incident-management": "情資事件管理",
 	"txt-incident-device-management": "設備管理",
 	"txt-incident-unit-management": "機關管理",
-	"txt-incident-config-management": "情資事件參數設定",
-	"txt-incident-log-management": "情資發布紀錄管理",
+	"txt-incident-config-management": "事件參數設定",
+	"txt-incident-log-management": "事件發布紀錄管理",
 	"txt-incident-events": "監控觸發紀錄",
 	"txt-incident-ttps": "攻擊手法",
 	"txt-prev-page": "上一頁",
@@ -20,7 +20,7 @@
 	"txt-send": "發布",
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
-	"txt-sendCheck": "是否直接發布",
+	"txt-sendCheck": "，是否直接發布?",
 	"txt-sendCheckHealth": "是否手動發布健康狀態統計單?",
 	"txt-download": "下載",
 	"txt-required": "必填欄位為空",
